Fix A mobile footer alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -95,7 +95,7 @@
 
 /* Social Icons */
 .social-icon-link {
-  padding-left: 19%;
+  padding-left: 0%;
   color: #fff;
   font-size: 24px;
 }
@@ -123,7 +123,7 @@
 
 .social-logo {
   color: #fff;
-  justify-self: start;
+  justify-self: center;
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
